# PetStoreTestsCRUD

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: test_launcher.yml
src/api/: petstore.py
tests/: conftest.py
tests/api_tests/petstore/: test_create.py  test_delete.py  test_read.py  test_update.py
